# TDMSVA

./: README.md
TDMSVA_back/: CMakeLists.txt  README.md
TDMSVA_back/gui/: CMakeLists.txt  file_str.h  icon.qrc  main.cpp  massdbwidget.cpp  massdbwidget.h  massdbwidget.ui
TDMSVA_back/gui/assets/: massdbwidget.ui
TDMSVA_back/ms_interface/: massdb.cpp  massdb.h  msdata.cpp  msdata.h  package.cpp  package.h  prsm_reader.cpp  prsm_reader.h
TDMSVA_back/network/: network_server.cpp  network_server.h
TDMSVA_back/test/: db_test.cpp  json_test.cpp  main.cpp  min.cpp  web_test.cpp
TDMSVA_back/testcases/package_test/: st_1_ms2.msalign  st_1_ms2_toppic_prsm.tsv
TDMSVA_back/util/: PrSM.h  deMs1.h  mod_total.cpp  mod_total.h  ms_writer.cpp  ms_writer.h  util.cpp  util.h
TDMSVA_front/: README.md  index.html  package-lock.json  package.json  vite.config.js
TDMSVA_front/src/: App.vue  AppMain.vue  R2.vue  R20903.vue  R20906.vue  R3.vue  R4.vue  home.vue  main.js
TDMSVA_front/src/assets/: ms_1.json
TDMSVA_front/src/components/: colorList.vue  dataPicker.vue  database.vue  echart.vue  ms.vue
TDMSVA_front/src/ms/: amio_mass.js  ms.js
TDMSVA_front/src/router/: router.js
